--- a/viewer/templates/genres.html
+++ b/viewer/templates/genres.html
@@ -8,6 +8,8 @@
     </tr>
   </table>
 {% endif %}
+
+
 <hr>
 
   {% for genre in genres %}
@@ -23,4 +25,39 @@
       </tr>
     </table>
     {% endfor %}
+
+{% if genres.paginator.num_pages == 1 %}
+
+{% else %}
+<hr>
+<table class="table">
+  <tr><td>
+    {% if genres.has_previous %}
+      <a href="?page={{ genres.previous_page_number }}">Previous</a>
+    {% endif %}
+    </td>
+    <td class="td_center" style="text-align: center" colspan="3">
+    {% if genres.number > 10 %}
+      <a href="?page=1">1</a>
+      <span class="ellipsis">...</span>
+    {% endif %}
+    {% for i in genres.paginator.page_range %}
+      {% if genres.number == i %}
+        <span class="current-page">{{ i }}</span>
+      {% elif i > genres.number|add:'-5' and i < genres.number|add:'5' %}
+        <a href="?page={{ i }}">{{ i }}</a>
+      {% endif %}
+    {% endfor %}
+    {% if genres.number < genres.paginator.num_pages|add:'-10' %}
+      <span class="ellipsis">...</span>
+      <a href="?page={{ genres.paginator.num_pages }}">{{ genres.paginator.num_pages }}</a>
+    {% endif %}
+    </td>
+    <td class="td_right">
+    {% if genres.has_next %}
+      <a href="?page={{ genres.next_page_number }}">Next</a>
+    {% endif %}
+    </td>
+</table>
+{% endif %}
 {% endblock %}
