including 3 selenium tests

--- a/viewer/templates/book.html
+++ b/viewer/templates/book.html
@@ -20,14 +20,14 @@
             You have to pay membership
           {% else %}
             {% if book.amount > 0 %}
-              <button data-product={{book.id}} data-user={{request.user.id}} data-action="add" class="update-cart">
+              <button id="borrow-book" data-product={{book.id}} data-user={{request.user.id}} data-action="add" class="update-cart">
                 Borrow
               </button>
             {% else %}
               {% if reserved %}
                   You have already reserved this book
               {% else %}
-              <button data-product={{book.id}} data-action="reserve" class="update-cart">
+              <button id="reserve-book" data-product={{book.id}} data-action="reserve" class="update-cart">
                 Reserve
               </button>
               {% endif %}
