--- a/viewer/templates/user.html
+++ b/viewer/templates/user.html
@@ -12,7 +12,7 @@
     <tr><td class="td_bold">Zaplaceno do:</td><td> {{ user.pay_to }} </td></tr>
     <tr><td class="td_bold">Prodloužit členství:</td>
       <td>
-        <button data-product={{user.user.id}} data-action="extend_membership" class="confirm-btn">Prodloužit
+        <button id="extend-btn" data-product={{user.user.id}} data-action="extend_membership" class="confirm-btn">Prodloužit
         </button>
       </td>
     </tr>
