--- a/viewer/templates/nav_menu.html
+++ b/viewer/templates/nav_menu.html
@@ -6,7 +6,7 @@
         <li class="nav-item{% if request.path == '/genres/' %} active{% endif %}"><a href="{% url 'genres' %}">Genres</a></li>
 
         <li class="nav-item{% if request.path == '/conditions/' %} active{% endif %}"><a href="{% url 'conditions' %}">Conditions</a></li>
-        <li class="nav-item{% if request.path == '/cart/' %} active{% endif %}"><a href="{% url 'cart' %}">Cart</a></li>
+        <li id="cart" class="nav-item{% if request.path == '/cart/' %} active{% endif %}"><a href="{% url 'cart' %}">Cart</a></li>
 
 
     </ul>
